# chatpdf

./: README.md  main.py  modelfile  pyproject.toml
src/: app.py  ui.py
