[project]
name = "chatpdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-ollama>=0.2.3",
    "ollama>=0.4.7",
    "pypdf2>=3.0.1",
    "streamlit>=1.42.2",
]
